<resources>
    <string name="app_name">TaPago</string>

    <!--<string name="apiKey">AIzaSyDGGZx0OloeVblBzwLW8MbmZB7KljYrGI8</string>-->
    <string name="apiKey">AIzaSyA7xSypa3RtNn9ciyGqT6xr-VEGfLeVZn4</string>

    <!-- Common String -->
    <string name="str_please_wait">Please Wait…</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="connection_timeout">Connection timeout. Please try again later.</string>
    <string name="no_internet">Could not connect to the internet. Please check your network.</string>
    <string name="home">Home</string>
    <string name="myEvent">My Events</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="rationale_call">This app needs access to permission.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_library">Choose from Library Image</string>
    <string name="add_photo">Add Photo!</string>
    <string name="are_logout">Are you sure you want to logout?</string>
    <string name="are_close">Are you sure you want to close account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="file_size">Please upload another file and size should be less than 8 mb.</string>
    <string name="please_back">Press back again to exit</string>
    <string name="current">You are currently following</string>
    <string name="citys">cities.</string>
    <string name="city">city.</string>
    <string name="ci">City</string>
    <string name="only">Only</string>
    <string name="left">voucher left</string>
    <string name="try_again">Try again</string>
    <string name="select_string">Select category</string>
    <string name="select_voucher">Select voucher</string>
    <string name="select_voucher_category">Select voucher category</string>
    <string name="quantity">Quantity must be greater than \u0020</string>
    <string name="amount">Amount must be greater than \u0020</string>
    <string name="orEqual">\u0020 or equal</string>
    <string name="are_delete">Are you sure you want to delete this event?</string>
    <string name="permisson_denied">permission denied</string>
    <string name="please_select_ticket">Please select at least one ticket</string>
    <string name="please_enter_code">Please enter QR code</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="cash">Cash</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="portuguese">Português</string>
    <string name="portugueses">Português \u0020</string>
    <string name="ticket_left">ticket left</string>
    <string name="are_sure_voucher">Voucher is been assigned to you, Please confirm it!</string>
    <string name="are_sure_ticket">Ticket is been assigned to you, Please confirm it!</string>
    <string name="close_account">Close account permanently</string>

    <string name="update_tapago">Update TaPago ?</string>
    <string name="update_text">TaPago recommends that you update to the latest version.</string>
    <string name="update">Update</string>
    <string name="not_now">Not Now</string>
    <string name="ticket_qr_code">Ticket Qr Code</string>
    <string name="payment">PAYMENT</string>
    <string name="credit_debit_card_details">Credit/Debit card details</string>
    <string name="pay">Pay</string>
    <string name="please_select_payment_type">Please Select Payment Type</string>
    <string name="cod">COD</string>
    <string name="online_payment">Online Payment</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="please_enter_card_number">Please enter card number</string>
    <string name="please_enter_valid_card_number">Please enter valid card number</string>
    <string name="please_select_expire_year">Please select expire year</string>
    <string name="please_select_expire_month">Please select expire month</string>
    <string name="please_enter_cvv">Please enter CVV</string>
    <string name="please_enter_card_holder_name">Please enter card holder name</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_historys">PAYMENT HISTORY</string>

    <!--New Added-->
    <string name="product">Product</string>
    <string name="product_not_found">Product not found</string>
    <string name="category">Category</string>
    <string name="add">ADD</string>
    <string name="category_not_found">Category not found</string>
    <string name="supermarket">Supermarket</string>
    <string name="events">Events</string>
    <string name="description">Description</string>
    <string name="product_details">Product Details</string>
    <string name="brand_name">Brand Name</string>
    <string name="type">Type</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="item">item</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="item_not_found">Item not found</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_house_no">Enter House Number</string>
    <string name="enter_apartment_name">Enter apartment name</string>
    <string name="enter_landmark">Enter landmark</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="pleaseEnterLastName">Please enter last name</string>
    <string name="pleaseEnterFirstName">Please enter first name</string>
    <string name="pleaseEnterMobile">Please enter mobile number</string>
    <string name="pleaseEnterValidMobile">Please enter valid mobile number</string>
    <string name="enterAddressName">Please enter house number</string>
    <string name="pleaseEnterhouseNo">Please enter house number</string>
    <string name="pleaseEnterApartmentName">Please enter apartment name</string>
    <string name="pleaseEnterLandmark">Please enter landmark</string>
    <string name="pleaseEnterCity">Please Enter City</string>
    <string name="pleaseEnterPincode">Please enter pincode</string>
    <string name="order_history">Order History</string>
    <string name="shipping_payment_history">Shipping Payment History</string>
    <string name="transaction_id">Transaction id :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="payment_date">Payment Date :</string>
    <string name="order_date">Order Date :</string>
    <string name="order_id">Order Id :</string>
    <string name="price_mt">Price : MT</string>
    <string name="total_price_mt">Total Price : MT</string>
    <string name="purchase_qty">Purchase Qty. :</string>
    <string name="search_products">Search Products</string>
    <string name="enter_street_name">Enter Street Name</string>
    <string name="enter_district">Enter District</string>
    <string name="pleaseenterStreetName">Please enter street name</string>
    <string name="pleaseEnterdistrict">Please enter district</string>
    <string name="add_new_address">Add New Address</string>
    <string name="save_address">Save Address</string>
    <string name="choose_nick_name_for_this_address">Choose nick name for this address</string>
    <string name="office">Work</string>
    <string name="other">Other</string>
    <string name="choose_your_address">Choose Your Address</string>
    <string name="you_want_to_delete">You want to delete?</string>
    <string name="please_select_address_type">Please select address type</string>
    <string name="first_no_number_or_symbols">First name cannot contain numbers or symbols</string>
    <string name="last_no_number_or_symbols">Last name cannot contain numbers or symbols</string>
    <string name="maxqty">You are not add more then 15 quantity</string>
    <string name="please_select_vendor">Please select vendor</string>
    <string name="payment_type">Payment Type :</string>
    <string name="payment_status">Payment Status :</string>
    <string name="payment_types">Payment Type</string>
    <string name="payment_statuss">Payment Status</string>
    <string name="payment_for">Payment For</string>


</resources>
