<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardMaxElevation="@dimen/_5sdp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/colorGray" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtProductName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/montserrat_bold"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_vertical"
                    android:text="@string/price_mt"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11sdp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtproductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_vertical"
                    android:text="@string/purchase_qty"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11sdp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtpurchaseqty"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center_vertical"
                    android:text="@string/total_price_mt"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11sdp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txttotalpurchasePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View style="@style/View"/>
</LinearLayout>